fixing z-index

--- a/assets/scss/components/_components.page-head.scss
+++ b/assets/scss/components/_components.page-head.scss
@@ -5,6 +5,7 @@
     left: 55%;
     top: 50%;
     transform: translateY(-50%);
+    z-index: 1;
   }
   &__content {
     min-height: 70vh;
